fixed to use PDFs instead of random web data which was supposed to be just a demonstration that we CAN fetch web pages, but it accidentally overwrote raw_docs variable

--- a/project_2/rag_chatbot.ipynb
+++ b/project_2/rag_chatbot.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "id": "65b49fcb",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "id": "9ff055a6",
    "metadata": {},
    "outputs": [
@@ -178,20 +178,7 @@
      "output_type": "stream",
      "text": [
       "Ignoring wrong pointing object 81 0 (offset 0)\n",
-      "Ignoring wrong pointing object 76 0 (offset 0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['data/Everstorm_Return_and_exchange_policy.pdf', 'data/Everstorm_Product_sizing_and_care_guide.pdf', 'data/Everstorm_Shipping_and_Delivery_Policy.pdf', 'data/Everstorm_Payment_refund_and_security.pdf']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Ignoring wrong pointing object 76 0 (offset 0)\n",
       "Ignoring wrong pointing object 80 0 (offset 0)\n"
      ]
     },
@@ -199,6 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['data/Everstorm_Return_and_exchange_policy.pdf', 'data/Everstorm_Product_sizing_and_care_guide.pdf', 'data/Everstorm_Shipping_and_Delivery_Policy.pdf', 'data/Everstorm_Payment_refund_and_security.pdf']\n",
       "Loaded 8 PDF pages from 4 files.\n"
      ]
     }
@@ -233,45 +221,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "id": "65abec32",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetched 2 documents from the web.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "URLS = [\n",
-    "    # --- BigCommerce – shipping & refunds ---\n",
-    "    \"https://developer.bigcommerce.com/docs/store-operations/shipping\",\n",
-    "    \"https://developer.bigcommerce.com/docs/store-operations/orders/refunds\",\n",
-    "    # --- Stripe – disputes & chargebacks ---\n",
-    "    # \"https://docs.stripe.com/disputes\",  \n",
-    "    # --- WooCommerce – REST API reference ---\n",
-    "    # \"https://woocommerce.github.io/woocommerce-rest-api-docs/v3.html\",\n",
-    "]\n",
+    "# URLS = [\n",
+    "#     # --- BigCommerce – shipping & refunds ---\n",
+    "#     \"https://developer.bigcommerce.com/docs/store-operations/shipping\",\n",
+    "#     \"https://developer.bigcommerce.com/docs/store-operations/orders/refunds\",\n",
+    "#     # --- Stripe – disputes & chargebacks ---\n",
+    "#     # \"https://docs.stripe.com/disputes\",  \n",
+    "#     # --- WooCommerce – REST API reference ---\n",
+    "#     # \"https://woocommerce.github.io/woocommerce-rest-api-docs/v3.html\",\n",
+    "# ]\n",
     "\n",
-    "try:\n",
-    "    # raise Exception(\"mabudio fail test\")\n",
-    "    loader = UnstructuredURLLoader(URLS)\n",
-    "    raw_docs = loader.load()\n",
-    "    ########################\n",
-    "    #### Your code here (~2-3 lines of code) ####\n",
-    "    ########################\n",
-    "    print(f\"Fetched {len(raw_docs)} documents from the web.\")\n",
-    "except Exception as e:\n",
-    "    print(\"⚠️  Web fetch failed, using offline copies:\", e)\n",
-    "    raw_docs = []\n",
-    "    ########################\n",
-    "    #### Your code here ####\n",
-    "    ########################   \n",
-    "    raw_docs = [PyPDFLoader(pdf_path).load() for pdf_path in pdf_paths]\n",
-    "    print(f\"Loaded {len(raw_docs)} offline documents.\")"
+    "# try:\n",
+    "#     # raise Exception(\"mabudio fail test\")\n",
+    "#     loader = UnstructuredURLLoader(URLS)\n",
+    "#     raw_docs = loader.load()\n",
+    "#     ########################\n",
+    "#     #### Your code here (~2-3 lines of code) ####\n",
+    "#     ########################\n",
+    "#     print(f\"Fetched {len(raw_docs)} documents from the web.\")\n",
+    "# except Exception as e:\n",
+    "#     print(\"⚠️  Web fetch failed, using offline copies:\", e)\n",
+    "#     raw_docs = []\n",
+    "#     ########################\n",
+    "#     #### Your code here ####\n",
+    "#     ########################   \n",
+    "#     raw_docs = [PyPDFLoader(pdf_path).load() for pdf_path in pdf_paths]\n",
+    "#     print(f\"Loaded {len(raw_docs)} offline documents.\")"
    ]
   },
   {
@@ -296,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "id": "450d48a0",
    "metadata": {},
    "outputs": [
@@ -304,18 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 51 chunks ready for embedding\n",
-      "Docs\n",
-      "\n",
-      "Store operations\n",
-      "\n",
-      "Shipping\n",
-      "\n",
-      "Overview\n",
-      "\n",
-      "Shipping\n",
-      "\n",
-      "You can create shipments from orders, and it is possible to create multiple shipments from a single order. A shipment represents a grouping of order line items that you can ship to a customer.\n"
+      "✅ 42 chunks ready for embedding\n"
      ]
     }
    ],
@@ -326,8 +295,7 @@
     "\"\"\"\n",
     "splitter = RecursiveCharacterTextSplitter(chunk_size=300, chunk_overlap=30)\n",
     "chunks = splitter.split_documents(raw_docs)\n",
-    "print(f\"✅ {len(chunks)} chunks ready for embedding\")\n",
-    "print(chunks[0].page_content)"
+    "print(f\"✅ {len(chunks)} chunks ready for embedding\")\n"
    ]
   },
   {
@@ -368,18 +336,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 92,
    "id": "4a222122",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/v4/rz21fv5s5fn_4nv27jvlbh3m0000gn/T/ipykernel_34313/1311734590.py:7: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
-      "  embeddings = SentenceTransformerEmbeddings(model_name=\"thenlper/gte-small\")\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -420,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 95,
    "id": "611eda64",
    "metadata": {},
    "outputs": [
@@ -428,7 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Vector store with 51 embeddings\n"
+      "✅ Vector store with 42 embeddings\n"
      ]
     }
    ],
@@ -442,27 +402,29 @@
     "\"\"\"\n",
     "YOUR CODE HERE (~3-5 lines of code)\n",
     "\"\"\"\n",
-    "import faiss\n",
-    "from langchain_community.docstore.in_memory import InMemoryDocstore\n",
-    "from uuid import uuid4\n",
-    "from langchain_core.documents import Document\n",
+    "# import faiss\n",
+    "# from langchain_community.docstore.in_memory import InMemoryDocstore\n",
+    "# from uuid import uuid4\n",
+    "# from langchain_core.documents import Document\n",
     "\n",
     "\n",
-    "index = faiss.IndexFlatL2(len(embedding_vector))\n",
-    "vectordb = FAISS(\n",
-    "    embedding_function=embeddings,\n",
-    "    index=index,\n",
-    "    docstore=InMemoryDocstore(),\n",
-    "    index_to_docstore_id={},\n",
-    ")\n",
+    "# index = faiss.IndexFlatL2(len(embedding_vector))\n",
+    "# vectordb = FAISS(\n",
+    "#     embedding_function=embeddings,\n",
+    "#     index=index,\n",
+    "#     docstore=InMemoryDocstore(),\n",
+    "#     index_to_docstore_id={},\n",
+    "# )\n",
     "\n",
-    "documents = []\n",
-    "for chunk in chunks:\n",
-    "    documents.append(Document(page_content=chunk.page_content))\n",
+    "# documents = []\n",
+    "# for chunk in chunks:\n",
+    "#     documents.append(Document(page_content=chunk.page_content))\n",
     "\n",
-    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
+    "# uuids = [str(uuid4()) for _ in range(len(documents))]\n",
     "\n",
-    "vectordb.add_documents(documents=documents, ids=uuids)\n",
+    "# vectordb.add_documents(documents=documents, ids=uuids)\n",
+    "\n",
+    "vectordb = FAISS.from_documents(chunks, embeddings)\n",
     "\n",
     "print(\"✅ Vector store with\", vectordb.index.ntotal, \"embeddings\")"
    ]
@@ -529,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "id": "b1d34a32",
    "metadata": {},
    "outputs": [
@@ -581,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
    "id": "dcecb2b6",
    "metadata": {},
    "outputs": [],
@@ -594,7 +556,7 @@
     "1) Use ONLY the provided <context> to answer.\n",
     "2) If the answer is not in the context, say: \"I don't know based on the retrieved documents.\"\n",
     "3) Be concise and accurate. Prefer quoting key phrases from the context.\n",
-    "4) When possible, cite sources as [source: www.example.com] using the metadata.\n",
+    "4) When possible, cite sources as [source: source] using the metadata.\n",
     "\n",
     "CONTEXT:\n",
     "{context}\n",
@@ -617,10 +579,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 98,
    "id": "0b138b3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ConversationalRetrievalChain(verbose=False, combine_docs_chain=StuffDocumentsChain(verbose=False, llm_chain=LLMChain(verbose=False, prompt=PromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, template='\\nYou are a **Customer Support Chatbot**. Use only the information in CONTEXT to answer.\\nIf the answer is not in CONTEXT, respond with “I\\'m not sure from the docs.”\\n\\nRules:\\n1) Use ONLY the provided <context> to answer.\\n2) If the answer is not in the context, say: \"I don\\'t know based on the retrieved documents.\"\\n3) Be concise and accurate. Prefer quoting key phrases from the context.\\n4) When possible, cite sources as [source: source] using the metadata.\\n\\nCONTEXT:\\n{context}\\n\\nUSER:\\n{question}\\n'), llm=Ollama(model='gemma3:1b', temperature=0.1), output_parser=StrOutputParser(), llm_kwargs={}), document_prompt=PromptTemplate(input_variables=['page_content'], input_types={}, partial_variables={}, template='{page_content}'), document_variable_name='context'), question_generator=LLMChain(verbose=False, prompt=PromptTemplate(input_variables=['chat_history', 'question'], input_types={}, partial_variables={}, template='Given the following conversation and a follow up question, rephrase the follow up question to be a standalone question, in its original language.\\n\\nChat History:\\n{chat_history}\\nFollow Up Input: {question}\\nStandalone question:'), llm=Ollama(model='gemma3:1b', temperature=0.1), output_parser=StrOutputParser(), llm_kwargs={}), return_source_documents=True, retriever=VectorStoreRetriever(tags=['FAISS', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x39ad00f50>, search_kwargs={'k': 8}))"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Expected steps:\n",
     "    # 1. Create a PromptTemplate that uses the SYSTEM_TEMPLATE you defined earlier, with input variables for \"context\" and \"question\".\n",
@@ -634,17 +607,20 @@
     "    input_variables=[\"context\", \"question\"],\n",
     "    template=SYSTEM_TEMPLATE\n",
     ")\n",
+    "# prompt_template.format(context=\"no refund policy\", question=\"What is your refund policy?\")\n",
     "\n",
     "llm = Ollama(model=\"gemma3:1b\", temperature=0.1)\n",
     "\n",
-    "retriever = vectordb.as_retriever(search_kwargs={\"k\": 2})\n",
+    "retriever = vectordb.as_retriever(search_kwargs={\"k\": 8})\n",
     "\n",
     "chain = ConversationalRetrievalChain.from_llm(\n",
     "    retriever=retriever,\n",
     "    llm=llm,\n",
-    "    combine_docs_chain_kwargs={\"prompt\": prompt_template}\n",
+    "    combine_docs_chain_kwargs={\"prompt\": prompt_template},\n",
+    "    return_source_documents=True\n",
     ")\n",
-    "\n"
+    "\n",
+    "chain"
    ]
   },
   {
@@ -667,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 99,
    "id": "9cf1584e",
    "metadata": {},
    "outputs": [
@@ -675,20 +651,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2 documents:\n",
+      "Found 8 documents:\n",
       "\n",
       "--- Document 1 ---\n",
-      "\"amount\": 1,            // Amount to refund\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
+      "How  long  do  refunds  take?    We  issue  refunds  the  same  day  your  return  is  scanned.  Banks  typically  post  credit  within:    ●  Card:  5-7  banking  days  ●  PayPal:  immediate  ●  Klarna:  2-5  days    Shop  Pay  Installments  voids  remaining  payments  or  refunds  for\n",
       "\n",
       "--- Document 2 ---\n",
-      "\"quantity\": 1,                // Quantity to refund\n",
-      "    }\n",
-      "  ],\n",
-      "  \"payments\": [...]\n",
-      "}\n"
+      "and  custom-embroidered  items:  no  return  unless  defective.   Refund  Timeline    ●  Warehouse  receipt  →  inspection  ≤  3  business  days  →  refund  initiates.    ●  Stripe  /  Apple  Pay  5-7  banking  days;  PayPal  instant;  Shop-Pay  up  to  10.   Defect  &  Warranty  Claims  (12\n",
+      "\n",
+      "--- Document 3 ---\n",
+      "payments  or  refunds  for  completed  ones.   Where’s  my  Klarna  statement?    Klarna  emails  the  payment  schedule  shortly  after  order  confirmation.  If  not  received,  log  in  at\n",
+      "\n",
+      "--- Document 4 ---\n",
+      "Gifts  return  for  **store  credit**  emailed  to  the  recipient;  original  purchaser  is  not  notified.   International  Returns    ●  Label  cost  is  deducted  from  refund  (approx.  $15–$25).  Duties  &  taxes  are  ●  non-refundable—claim  with  your  local  customs  office.   Unauthorized\n",
+      "\n",
+      "--- Document 5 ---\n",
+      "the  carrier  scans  the  return  label.  Authorization  drops  when  our  returns  team  receives  the  original  item.   Return  Window  Exceptions    ●  Holiday  gift  purchases  made  1  Nov  –  31  Dec:  return  period  extended  to  31  Jan.    ●  “Final  Sale”  and  custom-embroidered\n",
+      "\n",
+      "--- Document 6 ---\n",
+      "order  #  and  email.    ●  Select  “Refund”  or  “Exchange.”    ●  Print  prepaid  label;  pack  securely.  Multiple  items  can  share  one  box.   Instant  Exchange  Hold    We  place  a  temporary  $1  authorization  on  your  card  and  ship  the  new  size  once  the  carrier  scans  the\n",
+      "\n",
+      "--- Document 7 ---\n",
+      "office.   Unauthorized  /  Heavily  Worn  Items    ●  Items  showing  heavy  wear  (mud,  pet  hair,  smoke)  will  be  shipped  back  or  ●  donated  to  charity  at  our  discretion  minus  a  $15  handling  fee.   12 Contact    ●  returns@everstorm.example • Photo  hotline  +1  (406)  555-0188\n",
+      "\n",
+      "--- Document 8 ---\n",
+      "Everstorm  Outfitters    RETURN  &  EXCHANGE  POLICY    Document  ROX-2025-05   Easy-Fit  Promise    If  your  gear  doesn’t  fit  or  just  isn’t  your  vibe,  send  it  back  within  **30  days**  of  delivery  for  a  refund  or  free  size  exchange.   Eligibility  Checklist    ●  Unworn,\n"
      ]
     }
    ],
@@ -712,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 100,
    "id": "8f6d7a7d",
    "metadata": {},
    "outputs": [
@@ -724,33 +711,21 @@
       "================================================================================\n",
       "Q: If I'm not happy with my purchase, what is your refund policy and how do I start a return?\n",
       "================================================================================\n",
-      "A: You must receive payment of the order before you can issue a refund. Offline order refunds\n",
+      "A: Okay, here’s the refund policy and return process, based on the provided context:\n",
       "\n",
-      "USER:\n",
-      "If I'm not happy with my purchase, what is your refund policy and how do I start a return?\n",
-      "I'm not sure from the docs.\n",
+      "**Refund Policy**\n",
+      "\n",
+      "We offer refunds for defective or warranty-related items within 12 days of delivery.  If you’re not satisfied, you can initiate a return within 30 days of delivery for a refund or free size exchange.  Refunds are issued the same day your return is \n",
       "\n",
       "================================================================================\n",
       "Q: How long will delivery take for a standard order, and where can I track my package once it ships?\n",
       "================================================================================\n",
-      "A: I'm not sure from the docs.\n",
-      "\n",
-      "Delivery time depends on the shipping zone. Within North America, the shipping methods might include Free Shipping, Ship-by-Weight, and USPS.\n",
-      "\n",
-      "You can track your package once it ships using the Order Shipments resource. [source: www.example.com]\n",
+      "A: A standard order will take approximately 7.95 days to arrive, and you can track your package using the tracking link emailed upon label creation. [source: Context]\n",
       "\n",
       "================================================================================\n",
       "Q: What's the quickest way to contact your support team, and what are your operating hours?\n",
       "================================================================================\n",
-      "A: The POST Refund Quote exposes provider_ids.\n",
-      "\n",
-      "How do I get a list of provider_ids?\n",
-      "\n",
-      "The POST Refund Quote exposes provider_ids.\n",
-      "\n",
-      "Will a refunded item be returned to inventory?\n",
-      "\n",
-      "I'm not sure from the docs.\n"
+      "A: You can contact our support team through chat at 08:00–18:00 MT. You can also email us at logistics@everstorm.example or call +1 (406) 555-0188.\n"
      ]
     }
    ],
@@ -779,10 +754,16 @@
     "    print(f\"Q: {question}\")\n",
     "    print(f\"{'='*80}\")\n",
     "    \n",
-    "    result = chain.invoke({\"question\": question, \"chat_history\": chat_history})\n",
-    "    print(f\"A: {result['answer']}\")\n",
+    "    result = chain({\"question\": question, \"chat_history\": chat_history})\n",
+    "    print(f\"A: {result['answer'][:350]}\")\n",
     "    chat_history.append((question, result['answer']))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc0b8aa3",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
